--- a/Blocky/Blocky.csproj
+++ b/Blocky/Blocky.csproj
@@ -41,7 +41,12 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Game1.cs" />
+    <Compile Include="BlockyGame.cs" />
+    <Compile Include="Model\SpriteManager.cs" />
+    <Compile Include="Model\Entity.cs" />
+    <Compile Include="Model\EntityManager.cs" />
+    <Compile Include="Model\Player.cs" />
+    <Compile Include="Model\Structure.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -59,6 +64,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
